--- a/scss/4-modules/_5-message.scss
+++ b/scss/4-modules/_5-message.scss
@@ -1,11 +1,13 @@
+//  ============
+//  Message User
+//  ============
 .message {
   @include divider($left: null);
   @extend %grid-col-tablet-1-2;
   @extend %grid-col-desktop-1-1;
 
   @include mQ("desktop"){
-    @include divider($bottom: null);
-    //@include divider($bottom: null, $left: null);
+    border-bottom: none;
   }
   &-container {
     @extend %flex;
