--- a/scss/4-modules/_6-settings.scss
+++ b/scss/4-modules/_6-settings.scss
@@ -1,3 +1,6 @@
+//  ============
+//  Settings
+//  ============
 .settings-container {
   @extend %grid-col-tablet-1-2;
   @extend %grid-col-desktop-2-1;
