--- a/scss/4-modules/_6-settings.scss
+++ b/scss/4-modules/_6-settings.scss
@@ -7,15 +7,33 @@
   display: flex;
   flex-direction: column;
 
-  @include mQ('desktop'){
+  @include mQ('desktop') {
     @include divider($bottom: null);
   }
 
 }
 
+#timezone {
+  @include margin($top: 25px, $bottom: 15px);
+  width: 90vw;
+  margin-left: 10px;
+
+  @include mQ('desktop') {
+    width: 45vw;
+  }
+}
+
+.settings-button {
+  @extend %grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  margin: auto 10px 0;
+
+}
+
 //  Switch
 //  ======
-.switch-container {
+/*.switch-container {
   @extend %grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
@@ -100,22 +118,64 @@
   &-checkbox:checked + &-label &-switch {
     right: 0;
   }
+}*/
+
+.switch-container {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  margin-top: 30px;
 }
 
-#timezone {
-  @include margin($top:25px, $bottom: 15px);
-  width: 90vw;
-  margin-left: 10px;
+.switch-label {
+  margin: auto 40px auto 10px;
+}
 
-  @include mQ('desktop'){
-  width: 45vw;
+.switch {
+  display: flex;
+  cursor: pointer;
+  position: relative;
+  width: 70px;
+  height: 30px;
+  border-radius: 25px;
+  outline: none;
+  background-color: $color-sec-dark;
+  -webkit-appearance: none;
+  transition: background .3s;
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 20%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    height: 1.25rem;
+    width: 1.25rem;
+    background-color: $color-font-light;
+    transition: left .3s;
   }
-}
 
-.settings-button {
-  @extend %grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 20px;
-  margin: auto 10px 0;
+  &:checked {
+    background-color: $color-prim-light;
+  }
 
+  &:checked::after {
+    left: 80%;
+  }
+
+  &:checked:before {
+    content: 'ON';
+    align-self: center;
+    color: $color-font-light;
+    padding-left: 10px;
+    margin-left: 0;
+  }
+
+  &:before {
+    content: 'OFF';
+    margin-left: auto;
+    align-self: center;
+    padding-right: 10px;
+    color: $color-font-light;
+  }
 }
